# smart-garage-control

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  load.py
.github/workflows/: main.yml
src/: gpio.hpp  main.cpp  utilities.cpp  utilities.hpp
src/connectivity/: constants.hpp
src/controllers/: door-status.cpp  door-status.hpp  door.cpp  door.hpp
src/sensors/: board.cpp  range.hpp  vl53l4cx.cpp  vl53l4cx.hpp
src/sensors/detail/platform/include/: platform.h  vl53lx_platform.h  vl53lx_platform_ipp.h  vl53lx_platform_ipp_imports.h  vl53lx_platform_log.h  vl53lx_platform_user_config.h  vl53lx_platform_user_data.h  vl53lx_platform_user_defines.h
src/sensors/detail/platform/src/: platform.cpp  vl53lx_platform.c  vl53lx_platform.cpp  vl53lx_platform_ipp.c  vl53lx_platform_log.c
